--- a/styles/main.css
+++ b/styles/main.css
@@ -5,21 +5,53 @@ body {
 
 header, main, nav, footer {
     margin: 1.25rem auto;
-    max-width: 760px;
+    max-width: 600px;
 }
 
 header, footer {
-    background-color: navy;
-    color: #fff;
+    background-color: rgb(121, 199, 161);
+    color: #005335;
     text-align: center;
+    border-radius: 13px;
 }
 
 header {
     padding: 1.5rem;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    align-items: center;
 }
 
-p img { /* any image en un parrafo */
-    float: rigth; /* posicion en la pantalla */
-    margin: 10px;
-    border: 1px solid #000; /* tamano de la linea, si sera solido puntos o algo, color*/
+img {
+    border-radius: 10px;
+}
+
+main {
+    padding: 0 1rem ;
+}
+
+div {
+    margin: -1rem auto;
+    padding-top: 0;
+    border-top: 1px solid rgba(141, 141, 141, 0.566);
+    border-bottom: 1px solid rgba(141, 141, 141, 0.566);
+}
+
+section p {
+    margin-bottom: 0px;
+}
+section ul {
+    margin-top: 10px;
+}
+
+footer {
+    padding: 1rem;
+}
+
+footer p {
+    margin: 0;
+}
+
+#last-update {
+    color: #7d2c2f;
 }
