--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -1,8 +1,7 @@
 body {
     font-size: 18px;
     line-height: 1.3;
-    /* font-family: 'Nunito', sans-serif;
-    font-family: 'Poppins', sans-serif; */
+    background-color: #e7eef8;
 }
 
 header,
@@ -18,6 +17,16 @@ h2,
 h3 {
     font-family: "Nunito", sans-serif;
     margin: 0;
+}
+
+p,
+a {
+    font-family: "Poppins", sans-serif;
+    margin: 0;
+}
+
+header p {
+    font-size: 14px;
 }
 
 header {
@@ -52,10 +61,6 @@ ul {
     list-style: none;
     margin: 0;
     padding: 0;
-}
-
-.navigation li {
-    display: block;
 }
 
 .navigation li {
@@ -116,7 +121,11 @@ section {
     margin: 0.5rem;
 }
 
-main section:last-child {
+.none {
+    display: none;
+}
+
+main section:nth-last-child(2) {
     height: 600px;
     display: flex;
     flex-direction: column;
@@ -133,11 +142,24 @@ section div {
 }
 
 footer {
+    font-size: 15px;
     padding-top: 1rem;
     text-align: center;
+}
+
+footer img {
+    height: 150px;
 }
 
 footer a {
     text-decoration: none;
     color: white;
+    display: block;
+    margin: 15px 0;
+}
+
+hr {
+    border: none;
+    border-top: 1px solid #3d5e8b;
+    border-bottom: none;
 }
