--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -63,12 +63,15 @@ ul {
     padding: 0;
 }
 
+.navigation li:first-child {
+    display: block;
+}
+
 .navigation li {
     display: none;
 }
 
-.navigation a,
-#menu {
+.navigation a {
     text-decoration: none;
     color: white;
     text-align: center;
@@ -84,10 +87,17 @@ ul {
 
 .responsive {
     position: absolute;
-    top: 95px;
+    top: 0;
     left: 0;
     right: 0;
     background-color: #03295B;
+    text-align: right;
+}
+
+.responsive #menu {
+    position: relative;
+    top: 10px;
+    right: 2px;
     text-align: right;
 }
 
