--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 830px) {
 
     body {
         max-width: 1000px;
@@ -38,12 +38,13 @@
     main {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(3, 1fr);
-        gap: 10px;
         align-items: stretch;
+        column-gap: 10px;
     }
 
     main section {
         margin: 0;
+        height: fit-content;
     }
 
     main section:nth-last-child(2) {
