--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -27,6 +27,48 @@
         grid-row: 5 / 6;
     }
 
+    #joinusbanner {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0.3rem;
+        background-color: #001736c7;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #joinusbanner .joinus {
+        position: static;
+        border-color: white;
+        background-color: transparent;
+        color: white;
+    }
+
+    #joinusbanner div {
+        display: flex;
+    }
+
+    #joinusbanner a {
+        padding: 1rem;
+    }
+
+    #weather hr {
+        display: block;
+        margin: 0.5rem 35% 0.5rem 20%;
+        border: none;
+        border-top: 1px solid #023d8a;
+        border-bottom: none;
+    }
+
+    #weather {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
     #footer-grid {
         display: grid;
         grid-template-columns: auto 4fr 1fr 4fr;
