--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -5,6 +5,8 @@
         margin: 0 auto;
     }
 
+
+    /* -------------------- HEADER ------------------- */
     header {
         grid-template-columns: 50px 1fr auto 1fr;
     }
@@ -35,49 +37,62 @@
         display: block;
     }
 
-    main {
+
+    /* ------------------ MAIN -------------------- */
+
+    /* HOME PAGE */
+    #home {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(3, 1fr);
         align-items: stretch;
         column-gap: 10px;
+        row-gap: 5px;
     }
 
-    main section {
+    #home section {
         margin: 0;
         height: fit-content;
     }
 
-    main section:nth-last-child(2) {
+    #home section:nth-last-child(2) {
         flex-direction: column;
     }
 
-    main section:nth-child(1) {
+    #home section:nth-child(1) {
         grid-column: 2 / 4;
         grid-row: 1 / 3;
     }
 
-    main section:nth-child(2) {
+    #home section:nth-child(2) {
         grid-column: 1 / 2;
         grid-row: 1 / 2;
     }
 
-    main section:nth-child(3) {
+    #home section:nth-child(3) {
         grid-column: 1 / 2;
         grid-row: 2 / 3;
     }
 
-    main section:nth-child(4) {
+    #home section:nth-child(4) {
         grid-column: 2 / 4;
         grid-row: 3 / 4;
     }
 
-    main section:nth-child(5) {
+    #home section:nth-child(5) {
         grid-column: 4 / 5;
         grid-row: 1 / 4;
     }
 
-    main section:nth-child(6) {
+    #home section:nth-child(6) {
         grid-column: 1 / 2;
         grid-row: 3 / 4;
+    }
+
+    #imgspotligth {
+        margin-bottom: 10px;
+    }
+
+    .spotligth {
+        margin-bottom: 10px;
     }
 }
