--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -112,6 +112,13 @@
     }
 
 
+    /* DIRECTORY PAGE */
+    .directory-list {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+
     /* --------------------- FOOTER -------------------- */
     /* THANK YOU */
     #thankyou-footer {
