--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -174,6 +174,7 @@ main section:nth-last-child(2) {
 }
 
 .positionparent .joinus {
+    text-decoration: none;
     position: absolute;
     top: 10px;
     right: 10px;
