--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 527px) {
+@media only screen and (min-width: 620px) {
 
     /* ------------------MAIN ---------------- */
 
@@ -14,6 +14,7 @@
 
     #home section:nth-last-child(2) {
         flex-direction: row;
+        justify-content: center;
     }
 
     #home section.none {
