--- a/BountifulFoods/styles/large.css
+++ b/BountifulFoods/styles/large.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 890px) {
+@media only screen and (min-width: 950px) {
 
     /* ------------------ HEADER --------------------- */
     header {
@@ -24,7 +24,6 @@
         width: 600px;
         margin: 0 auto;
         padding: 20px 0;
-        /* background-color: transparent; */
     }
 
     .navigation li {
@@ -58,6 +57,75 @@
     .navigation div a,
     .navigation img {
         padding: 0 5px;
+    }
+
+
+    /* ------------------ MAIN ----------------------- */
+    /* ----- HOME ----- */
+    main#home {
+        grid-template-columns: minmax(600px, auto) minmax(170px, auto);
+        grid-template-rows: 1fr .5fr auto;
+    }
+
+    .slideshow-container {
+        display: none;
+    }
+
+    /* GALERY */
+    .galery-container {
+        grid-column: 1/2;
+        grid-row: 1/3;
+        display: flex;
+        width: 100%;
+        height: auto;
+        margin: 0 auto;
+    }
+
+    .galery-container .images {
+        width: auto;
+        position: relative;
+    }
+
+    .galery-container img {
+        width: 100%;
+    }
+
+    .galery-container .text {
+        display: block;
+        color: transparent;
+        font-size: 1rem;
+        top: 0;
+        bottom: 0;
+        transition: .8s ease;
+    }
+
+    .galery-container .text:hover {
+        color: #d64045;
+        background-color: transparent;
+    }
+
+
+    #fresh-link {
+        grid-row: 1/2;
+    }
+
+    #drink-count {
+        grid-row: 2/3;
+    }
+
+    #weather {
+        grid-column: 1/2;
+    }
+
+    #coast-info {
+        grid-column: 2/3;
+        grid-row: 3/4;
+    }
+
+    /* ABOUT US PAGE  */
+    #about-us {
+        width: 950px;
+        margin: 0px auto;
     }
 
 
